--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-lib": "ng build ngx-state-service",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test coverage": "ng test --no-watch --code-coverage"
