--- a/projects/ngx-state-service/package.json
+++ b/projects/ngx-state-service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-state-service",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Lightweight state management library for Angular.",
   "author": {
     "name": "Radovan Cervenka"
@@ -20,8 +20,8 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/common": ">=14.0.0",
+    "@angular/core": ">=14.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
