--- a/projects/ngx-state-service/package.json
+++ b/projects/ngx-state-service/package.json
@@ -24,7 +24,8 @@
     "@angular/core": ">=14.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "lodash-es": "^4.17.21"
   },
   "sideEffects": false
 }
